# docker_glue_pyspark_demo

./: .gitignore  DOCKER_TEST_SETUP.md  Dockerfile  Dockerfile.glue-5-0  Dockerfile_glue_metastore_postrgres_setup  Dockerfile_vanilla_pyspark  OIDC_SETUP_GUIDE.md  README.md  SONARCLOUD_SETUP.md  TESTING.md  TEST_QUICK_REFERENCE.md  TEST_SUITE_SUMMARY.md  docker-compose-metastore-postgres.yaml  docker-compose.yaml  docker_cli.txt  jupyterlab-snippets.md  pyproject.toml  pytest.ini  sonar-project.properties
.github/: copilot-instructions.md
.github/prompts/: unit-tester.prompt.md
.github/workflows/: ci-pipeline.yml  ci-publish.yml  ci-sequential.yml  deploy-aws.yml  test.yml
plain/: basic_pyspark_glue_with_hive_metastore.py  bronze_job.py  gold_job.py  main.py  old_spark_jars_setup_backup.txt  silver_job.py
purchase_order/: bronze_job.py  gold_job.py  silver_job.py
scripts/: generate_plain_events.bash  generate_plain_events.py  generate_po_events.bash  generate_po_events.py  run-tests-docker.bash  run-tests.bash  setup-test-env.bash  shutdown-containers.bash  start-containers.bash  test-deploy-locally.bash
terraform/: main.tf  providers.tf
tests/: README.md  __init__.py  conftest.py
tests/plain/: __init__.py  test_bronze_job.py  test_bronze_job_integration.py  test_gold_job.py  test_gold_job_integration.py  test_silver_job.py  test_silver_job_integration.py
tests/purchase_order/: __init__.py  test_bronze_job.py  test_bronze_job_integration.py  test_gold_job.py  test_gold_job_integration.py  test_silver_job.py  test_silver_job_integration.py
