[tool.poetry]
name = "docker_glue_pyspark_demo"
version = "0.1.0"
description = "A PySpark and AWS Glue project with Kafka, Iceberg, and LocalStack"
authors = ["Andy Wong <awong.cm@gmail.com>"]
package-mode = true
packages = [{ include = "plain" }, { include = "purchase_order" }]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.18.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
pyspark = "3.3.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
moto = { extras = ["s3", "dynamodb", "logs"], version = "^4.2.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
